--- a/digi-react/package.json
+++ b/digi-react/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.2.3",
     "eslint-plugin-react": "^7.32.1",
     "jest": "^29.3.1",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
